# m1-transcoder

./: .gitignore  .gitmodules  README.md  VERSION  package-lock.json  package.json
app/: convertProcesses.js  converter.js  downloader.css  downloader.js  fonts.css  index.html  main.js  progressbar.css  renderer.js  stereoFoldDown.js  stereoFoldDown.test.js  style.css
juce_plugin/: .gitignore  .gitmodules  CMakeLists.txt  VERSION
juce_plugin/Modules/: CMakeLists.txt
juce_plugin/Resources/: CMakeLists.txt
juce_plugin/Source/: AlertData.h  CMakeLists.txt  Config.h  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce_plugin/Source/UI/: M1AlertComponent.h  M1Checkbox.h  M1CircleMeter.h  M1DropdownButton.h  M1DropdownMenu.h  M1Label.h  M1ScrollableList.h  M1Slider.h  M1ToggleButton.h
scripts/: notarize.js  setup.sh
